# llt

./: .gitignore  Makefile.am  README.md  TODO  config.h  configure.ac  libtool  llt.pc  llt.pc.in
doc/: llt.dxy
doc/html/: amc_8c.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  formula.repository  globals.html  globals_func.html  group__lattice.html  group__vorticity.html  index.html  modules.html
examples/Heaving/: heave
examples/Pitching/: naca0015.sec  pitch  procdata.m  rwing.m
examples/Pitching/Xfoil/: log.txt  run.txt
examples/Propeller/: 6700RPM.txt  naca4412.sec  procdata.m  prop
examples/Rotor/: rotor
examples/Wing/: ewing.m  wing
notes/: notes.tex
notes/auto/: notes.el
octave/: elwing.m  mklline.m  mksecfile.m  readprop.m  readsec.m  readwake.m
src/: Makefile.am  assembly.c  assembly.lo  doxy.txt  lattice.c  lattice.lo  libllt.la  llt-private.h  llt-xfoil  llt-xfoil.in  llt.c  llt.h  llt.lo  naca.c  naca.lo  scripts.c  scripts.lo  sections.c  sections.lo  solver.c  wings.c  wings.lo
src/.deps/: assembly.Plo  lattice.Plo  llt.Plo  naca.Plo  scripts.Plo  sections.Plo  solver.Plo  wings.Plo
src/.libs/: libllt-1.0.so.0  libllt-1.0.so.0.0.0  libllt.la  libllt.lai
tests/: APC10x5E.txt  NACA4412.txt  log.txt  pcurves  pwing  run.txt  rwing.m  section.sec  test  uiuc2xfoil
tests/Xfoil/: log.txt
tools/: Makefile.am  llt-polar  llt-polar.c  llt-solve  llt-solve.c  llt-test  llt-test.c
tools/.deps/: llt-polar.Po  llt-solve.Po  llt-test.Po
